syntax = "proto3";

package com.jiangfucheng.im.protobuf;

option java_package = "com.jiangfucheng.im.protobuf";
option java_outer_classname = "SingleChat";

message SingleChatRequest {
    int64 msg_id = 1;
    int64 from_id = 2;
    int64 to_id = 3;
    int32 type = 4;
    string content = 5;
    string token = 6;
}

message SingleChatResponse {
    int64 msg_id = 1; //消息id  区分每个会话中的消息
    int64 timestamp = 2; //服务器收到消息的时间
    int64 from_id = 3;
    int64 to_id = 4;
}